<resources>
    <string name="app_name">寻物</string>
    <string name="code">验证码</string>
    <string name="about">关于</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>

    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注册</string>
    <string name="action_submit">提交</string>
    <string name="action_cancel">取消</string>
    <string name="action_get_code">获取验证码</string>
    <string name="action_order_time_asc">按时间升序排序</string>
    <string name="action_order_time_desc">按时间降序排序</string>
    <string name="action_settings">设置</string>
    <string name="action_info">关于</string>

    <string name="describe">描述：</string>

    <string name="phone">联系方式：</string>
    <string name="telephone">手机号</string>

    <string name="navigation_drawer_open">打开侧滑窗口</string>
    <string name="navigation_drawer_close">关闭侧滑窗口</string>

    <string name="success_login">登陆成功</string>
    <string name="success_register">注册成功</string>
    <string name="success_send_code">验证码已成功发送</string>
    <string name="success_send_find">寻物启事已成功发布</string>
    <string name="success_create_user_info">用户信息创建成功</string>

    <string name="error_unknown">未知错误</string>
    <string name="error_register">注册失败，可能是该手机已被注册使用</string>
    <string name="error_login">用户名或密码不正确</string>
    <string name="error_empty_username">用户名不能为空</string>
    <string name="error_empty_password">密码不能为空</string>
    <string name="error_exist_username">用户名已存在</string>
    <string name="error_length_username_password">用户名和密码长度至少为6位</string>
    <string name="error_empty_code">验证码不能为空</string>
    <string name="error_empty_telephone">手机号不能为空</string>
    <string name="error_check_code">验证码错误</string>
    <string name="error_send_code">验证码发送失败</string>
    <string name="error_send_find">发布失败，请检查您所填写的信息是否有误</string>
    <string name="error_create_user_info">用户信息创建失败</string>


    <string name="title">主题：</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_user_info">用户信息</string>
    <string name="title_update_user_info">更新信息</string>
    <string name="title_other">其他</string>
    <string name="title_find_square">寻物广场</string>
    <string name="title_find_mine">我的寻物</string>
    <string name="title_find_message">寻物通知</string>
    <string name="title_find">寻物启事</string>

    <string name="change">修改</string>

    <string name="tip_lost">未找到</string>
    <string name="tip_found">已找到</string>


    <string name="action_logout">注销</string>
    <string name="about_thanks">感谢你的使用</string>
    <string name="about_thanks_content">这是我做的第一个APP——寻物APP，只提供了用户注册登录和寻物启事发布功能。\n(ง •̀_•́)ง </string>
    <string name="source_code">源码</string>
    <string name="github">Github</string>
    <string name="about_source_code_content">第一次写的一个小项目，代码也较为冗余，但是对于新手学习来说不妨看看。\n(´・ω・`)</string>
    <string name="blog">Blog</string>
    <string name="here">这里</string>
    <string name="about_here_content">版本：v1.0.0\n作者：Pwcong</string>


</resources>
