<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_square"
            android:icon="@drawable/ic_business_white_18dp"
            android:title="@string/title_find_square" />
        <item
            android:id="@+id/nav_find_mine"
            android:icon="@drawable/ic_import_contacts_white_18dp"
            android:title="@string/title_find_mine" />
        <item
            android:id="@+id/nav_find_message"
            android:icon="@drawable/ic_mail_outline_white_18dp"
            android:title="@string/title_find_message" />

    </group>

    <item android:title="@string/title_other">
        <menu>

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_outline_white_18dp"
                android:title="@string/action_info" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_white_18dp"
                android:title="@string/action_logout" />

        </menu>
    </item>

</menu>
