<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.AddItemActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.qiujuer.genius.ui.widget.TextView
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="40dp" />
            <net.qiujuer.genius.ui.widget.EditText
                android:layout_weight="2"
                android:id="@+id/et_title"
                android:hint="不少于6字"
                android:textColor="@color/material_deep_teal_500"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:textSize="28dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.qiujuer.genius.ui.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/describe"
                android:textSize="28dp" />
            <net.qiujuer.genius.ui.widget.EditText
                android:id="@+id/et_describe"
                android:hint="不少于18个字"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.qiujuer.genius.ui.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="28dp" />
            <net.qiujuer.genius.ui.widget.EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="QQ、手机、邮箱等"
                android:inputType="textMultiLine"
                android:textSize="24dp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>